--- a/index.html
+++ b/index.html
@@ -513,12 +513,14 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="dom.js"></script>
     <script src="classes/Client.js"></script>
     <script src="classes/SavingBank.js"></script>
     <script src="classes/DebitCard.js"></script>
     <script src="classes/CreditCard.js"></script>
     <script src="classes/Movement.js"></script>
     <script src="function.js"></script>
+    
 
 </body>
 
