--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <div>
         <nav class="navbar navbar-dark bg-dark sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">TP2 - CarraBank - Home Banking - Alumnos: INSERTE SUS APELLIDOS
-                    AQUÍ</a>
+                <a class="navbar-brand" href="#">TP2 - CarraBank - Home Banking - Alumnos: Teruya y Simonetti</a>
 
                 <!-- Botón menú hamburguesa -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu"
+                <button hidden class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu"
                     aria-controls="offcanvasMenu">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,8 +35,8 @@
             </div>
             <div class="offcanvas-body">
                 <div class="d-flex justify-content-between align-items-center mt-3">
-                    <span id="usuario-logueado">Hola, Usuario</span>
-                    <button class="btn btn-outline-light btn-sm" id="logout">Cerrar sesión</button>
+                    <span id="usuario-logueado">Hola, <span id="nombreUsuarioLogeado"></span></span>
+                    <button class="btn btn-outline-light btn-sm" id="logout" onclick="logout()">Cerrar sesión</button>
                 </div>
                 <hr class="text-white">
                 <ul class="nav flex-column">
@@ -89,7 +88,7 @@
                         <div class="tab-pane fade show active" id="loginFormContainer">
                             <form id="loginForm">
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="loginDni" placeholder="DNI" required>
+                                    <input type="number" class="form-control" id="loginDni" placeholder="DNI" required>
                                     <label for="loginDni">DNI</label>
                                 </div>
                                 <div class="form-floating mb-3">
@@ -97,7 +96,7 @@
                                         placeholder="Contraseña" required>
                                     <label for="loginPassword">Contraseña</label>
                                 </div>
-                                <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+                                <button type="button" class="btn btn-primary w-100" onclick="chequeoIngreso()">Ingresar</button>
                             </form>
                         </div>
 
@@ -115,7 +114,7 @@
                                     <label for="registerLastName">Apellido</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="registerDni" placeholder="DNI" required>
+                                    <input type="number" class="form-control" id="registerDni" placeholder="DNI" required>
                                     <label for="registerDni">DNI</label>
                                 </div>
                                 <div class="form-floating mb-3">
@@ -128,7 +127,7 @@
                                         placeholder="Contraseña" required>
                                     <label for="registerPassword">Contraseña</label>
                                 </div>
-                                <button type="submit" class="btn btn-success w-100">Crear cuenta</button>
+                                <button type="button" class="btn btn-success w-100" onclick="chequeoRegistro()">Crear cuenta</button>
                             </form>
                         </div>
 
