--- a/index.html
+++ b/index.html
@@ -138,47 +138,13 @@
     </div>
 
     <div>
-        <section id="accounts" class="border rounded shadow-sm p-4 container my-5">
+        <section id="accounts" class="border rounded shadow-sm p-4 container my-5" hidden>
             <h2 class="mb-4">Mis Cuentas</h2>
-
             <div class="row">
-                <!-- Ejemplo de una card para caja de ahorro en pesos -->
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Caja de Ahorro en Pesos</h5>
-                            <p class="card-text mb-1"><strong>Moneda:</strong> ARS</p>
-                            <p class="card-text mb-1"><strong>Saldo:</strong> $120.000</p>
-                            <p class="card-text mb-1"><strong>Descubierto disponible:</strong> $5.000</p>
-                            <p class="card-text mb-1"><strong>Descubierto usado:</strong> $2.000</p>
-                            <p class="card-text mb-1"><strong>Alias:</strong> mi.cuenta.pesos</p>
-                            <p class="card-text mb-3"><strong>CBU:</strong> 0123456789012345678901</p>
-                            <div class="d-grid">
-                                <button class="btn btn-outline-primary btn-sm">Ver movimientos</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Ejemplo de una card para caja de ahorro en dólares -->
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <div class="card shadow-sm h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">Caja de Ahorro en Dólares</h5>
-                            <p class="card-text mb-1"><strong>Moneda:</strong> USD</p>
-                            <p class="card-text mb-1"><strong>Saldo:</strong> U$D 200</p>
-                            <p class="card-text mb-1"><strong>Alias:</strong> mi.cuenta.dolares</p>
-                            <p class="card-text mb-3"><strong>CBU:</strong> 0987654321098765432109</p>
-                            <div class="d-grid">
-                                <button class="btn btn-outline-primary btn-sm">Ver movimientos</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
-        <section id="debitCards" class="border rounded shadow-sm p-4 container my-5">
+        <section id="debitCards" class="border rounded shadow-sm p-4 container my-5" hidden>
 
             <h2>Tarjetas de Débito</h2>
 
@@ -186,7 +152,6 @@
             <div class="mb-3">
                 <label for="debitCardAccountSelect" class="form-label">Seleccionar caja de ahorro</label>
                 <select id="debitCardAccountSelect" class="form-select">
-                    <!-- Opciones a generar dinámicamente -->
                 </select>
             </div>
 
@@ -224,7 +189,7 @@
 
         </section>
 
-        <section id="transfers" class="border rounded shadow-sm p-4 container my-5">
+        <section id="transfers" class="border rounded shadow-sm p-4 container my-5" hidden>
             <h2 class="mb-4">Transferencias</h2>
 
             <form>
@@ -260,7 +225,7 @@
             </form>
         </section>
 
-        <section id="dollar" class="border rounded shadow-sm p-4 container my-5">
+        <section id="dollar" class="border rounded shadow-sm p-4 container my-5" hidden>
             <h2 class="mb-4">Compra / Venta de Dólares</h2>
 
             <div class="d-flex justify-content-between gap-3 mb-4 flex-wrap">
@@ -321,7 +286,7 @@
         </section>
 
 
-        <section id="creditCards" class="border rounded shadow-sm p-4 container my-5">
+        <section id="creditCards" class="border rounded shadow-sm p-4 container my-5" hidden>
 
             <h2>Tarjetas de Crédito</h2>
 
@@ -386,7 +351,7 @@
 
         </section>
 
-        <section id="payments" class="container border rounded shadow p-4 my-4">
+        <section id="payments" class="container border rounded shadow p-4 my-4" hidden>
             <h2>Cargar gasto</h2>
 
             <!-- Selección de medio de pago -->
@@ -429,7 +394,7 @@
         </section>
 
 
-        <section id="investments" class="container border rounded shadow p-4 my-4">
+        <section id="investments" class="container border rounded shadow p-4 my-4" hidden>
             <h2>Inversiones</h2>
 
             <!-- Selección de cuenta -->
